force-app/main/default/objects/leaseworks__Applicable_Calendar__c/leaseworks__Applicable_Calendar__c.object-meta.xml
<CustomObject>
    <description>This table acts as a bridge between Leases and Holiday calendars, allowing various modules to adjust dates based on holidays. This includes invoice due dates, interest rate resets, and more. Each Lease typically has at least one linked calendar based on the Lessor&#39;s (and often Lessee&#39;s) location.
[MODULE: Contract]
[LOAD: Yes]
[PREREQUISITES: Lease]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Applicable Calendar</label>
    <nameField>
        <label>Holiday Cal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicable Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>