force-app/main/default/objects/leaseworks__Applicable_Calendar__c/fields/leaseworks__Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lease</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Applicable Calendars</relationshipLabel>
    <relationshipName>Holiday_Cal</relationshipName>
    <type>Lookup</type>
</CustomField>