force-app/main/default/objects/leaseworks__Applicable_Calendar__c/fields/leaseworks__Weekend__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Weekend__c</fullName>
    <formula>Text(leaseworks__Holiday_Schedule__r.leaseworks__Weekend__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekend</label>
    <type>Text</type>
</CustomField>