force-app/main/default/objects/leaseworks__Applicable_Calendar__c/fields/leaseworks__Year__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Year__c</fullName>
    <formula>leaseworks__Holiday_Schedule__r.leaseworks__Year_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused2401_Year</label>
    <type>Text</type>
</CustomField>